unified_tests/member_access_and_construction/field_access_on_non_struct/expect/build.text.stderr
lib.copp:3:14: error: cannot access field 'y' on non-struct type int64
      return x.y
               ^
